src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>LV_Submittal_URL__c</fullName>
        <description>Link to the LV Contract URL</description>
        <inlineHelpText>Link to the LV Submittal Contract URL</inlineHelpText>
        <label>LV Submittal URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>LV_Submittal__c</fullName>
        <inlineHelpText>for Submittal Cases this is to  Submittal contract ID in LV. (e.g., SUB-00528)</inlineHelpText>
        <label>LV Submittal</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>the original source contact for a submittal</inlineHelpText>
        <label>Submittal Source Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.TYPE</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CASES.ESCALATION_STATE</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>equals</operation>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>All_Cases_Asset_Submittals</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.TYPE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.TYPE</field>
            <operation>equals</operation>
            <value>Asset Submittal</value>
        </filters>
        <label>All Cases - Asset Submittals</label>
    </listViews>
    <listViews>
        <fullName>All_Cases_Inventory_Review</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.TYPE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.TYPE</field>
            <operation>equals</operation>
            <value>Inventory Review</value>
        </filters>
        <label>All Cases - Inventory Review</label>
    </listViews>
    <listViews>
        <fullName>All_Closed_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.TYPE</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.CLOSED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Complete,Closed,Closed - Not Processed</value>
        </filters>
        <filters>
            <field>CASES.TYPE</field>
            <operation>equals</operation>
            <value>Other</value>
        </filters>
        <filters>
            <field>CASES.SUBJECT</field>
            <operation>contains</operation>
            <value>cash</value>
        </filters>
        <label>All Closed Cases</label>
    </listViews>
    <listViews>
        <fullName>All_Open_Cases_Asset_Submittal</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.TYPE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.TYPE</field>
            <operation>equals</operation>
            <value>Asset Submittal</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>On Hold,Escalated,Complete,Closed,Closed - Not Processed</value>
        </filters>
        <label>All Open Cases - Asset Submittal</label>
    </listViews>
    <listViews>
        <fullName>All_Open_Cases_Asset_Updates</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.TYPE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CASES.TYPE</field>
            <operation>equals</operation>
            <value>Asset Closing Update</value>
        </filters>
        <label>All Open Cases - Asset Updates</label>
    </listViews>
    <listViews>
        <fullName>All_Open_Cases_Closing_Updates</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.TYPE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CASES.TYPE</field>
            <operation>equals</operation>
            <value>Asset Closing Update</value>
        </filters>
        <label>All Open Cases - Closing Updates</label>
    </listViews>
    <listViews>
        <fullName>All_STOR_Cases</fullName>
        <columns>CASES.CLOSED_DATE</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.TYPE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.TYPE</field>
            <operation>equals</operation>
            <value>Asset Submittal,Asset Closing Update</value>
        </filters>
        <label>All STOR Cases</label>
    </listViews>
    <listViews>
        <fullName>Cases_with_Division_Order</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>opportunity__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>In Progress</value>
        </filters>
        <filters>
            <field>CASES.TYPE</field>
            <operation>equals</operation>
            <value>Division Order,Notice of Ownership Change</value>
        </filters>
        <label>DO Cases In Progress</label>
    </listViews>
    <listViews>
        <fullName>Cases_without_opportunities</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>opportunity__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>CASES.TYPE</field>
            <operation>equals</operation>
            <value>Division Order,Notice of Ownership Change</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>New,In Progress,In Review,On Hold,Escalated,Closed - Not Processed</value>
        </filters>
        <label>DO Cases without opportunities</label>
    </listViews>
    <listViews>
        <fullName>Division_Order_Open_Cases</fullName>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.TYPE</columns>
        <columns>CASES.STATUS</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Complete,Closed,Closed - Not Processed</value>
        </filters>
        <filters>
            <field>OWNER_NAME</field>
            <operation>notContain</operation>
            <value>Brafford</value>
        </filters>
        <filters>
            <field>OWNER_NAME</field>
            <operation>notContain</operation>
            <value>Brandon</value>
        </filters>
        <filters>
            <field>OWNER_NAME</field>
            <operation>notContain</operation>
            <value>Kristin</value>
        </filters>
        <filters>
            <field>OWNER_NAME</field>
            <operation>notContain</operation>
            <value>Elliott</value>
        </filters>
        <filters>
            <field>OWNER_NAME</field>
            <operation>notContain</operation>
            <value>Wes</value>
        </filters>
        <filters>
            <field>OWNER_NAME</field>
            <operation>notContain</operation>
            <value>Jamal</value>
        </filters>
        <filters>
            <field>CASES.TYPE</field>
            <operation>equals</operation>
            <value>Division Order,Notice of Ownership Change</value>
        </filters>
        <label>DO Open Cases</label>
    </listViews>
    <listViews>
        <fullName>High_Priority_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>opportunity__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.TYPE</field>
            <operation>equals</operation>
            <value>Division Order,Notice of Ownership Change</value>
        </filters>
        <filters>
            <field>CASES.PRIORITY</field>
            <operation>equals</operation>
            <value>High</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>New,In Progress,In Review,On Hold,Escalated</value>
        </filters>
        <label>High Priority Cases</label>
    </listViews>
    <listViews>
        <fullName>JHK_DO_Cases_Closed</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>opportunity__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER_NAME</field>
            <operation>contains</operation>
            <value>Jason</value>
        </filters>
        <filters>
            <field>CASES.TYPE</field>
            <operation>equals</operation>
            <value>Division Order,Notice of Ownership Change</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Complete,Closed</value>
        </filters>
        <label>JHK - DO Cases Closed</label>
    </listViews>
    <listViews>
        <fullName>JHK_DO_Cases_In_Progress</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>opportunity__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER_NAME</field>
            <operation>contains</operation>
            <value>Jason</value>
        </filters>
        <filters>
            <field>CASES.TYPE</field>
            <operation>equals</operation>
            <value>Division Order,Notice of Ownership Change</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>In Progress</value>
        </filters>
        <label>JHK - DO Cases In Progress</label>
    </listViews>
    <listViews>
        <fullName>Land_Admin_Open_Cases</fullName>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.TYPE</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Complete,Closed,Closed - Not Processed</value>
        </filters>
        <filters>
            <field>OWNER_NAME</field>
            <operation>notContain</operation>
            <value>Pierce</value>
        </filters>
        <filters>
            <field>OWNER_NAME</field>
            <operation>notContain</operation>
            <value>John Harrel</value>
        </filters>
        <filters>
            <field>OWNER_NAME</field>
            <operation>notContain</operation>
            <value>Reynolds</value>
        </filters>
        <filters>
            <field>OWNER_NAME</field>
            <operation>notContain</operation>
            <value>PAUL</value>
        </filters>
        <filters>
            <field>OWNER_NAME</field>
            <operation>notContain</operation>
            <value>Jason</value>
        </filters>
        <filters>
            <field>OWNER_NAME</field>
            <operation>notContain</operation>
            <value>Mckenzie</value>
        </filters>
        <filters>
            <field>OWNER_NAME</field>
            <operation>notEqual</operation>
            <value>Revenue Quest</value>
        </filters>
        <filters>
            <field>CASES.TYPE</field>
            <operation>notEqual</operation>
            <value>Division Order,Notice of Ownership Change</value>
        </filters>
        <filters>
            <field>OWNER_NAME</field>
            <operation>notContain</operation>
            <value>Seth</value>
        </filters>
        <label>Land-Ops Open Cases</label>
    </listViews>
    <sharingModel>ReadWriteTransfer</sharingModel>
</CustomObject>